<resources>
    <string name="app_name">LOOKHEART</string>
    <string name="title_activity_login">LOOKHEART</string>
    <string name="titleText">LOOKHEART</string>
    <string name="joinDate">Join Date</string>
    <string name="loginLabel">Log in</string>
    <string name="loginText">Welcome to the LOOKHEART service.\nEnter your registered ID and password.</string>
    <string name="email_Label">E-mail</string>
    <string name="email_Hint">Please enter your email</string>
    <string name="password_Label">Password</string>
    <string name="password_Hint">Please enter a password</string>
    <string name="autoLogin">Auto-Login</string>
    <string name="findEmailPassword">Find ID/PW</string>
    <string name="signupHelpText">Is this your first time using LOOKHEART?</string>
    <string name="signupButton">Sign up</string>
    <string name="idAndPwHelp">Enter your email/password</string>
    <string name="loginSuccess">Login Success!</string>
    <string name="loginFailed">Login Failed</string>
    <string name="incorrectlyLogin">You entered your email or password incorrectly</string>
    <string name="serverErr">The server failed to verify the data.</string>
    <string name="noti">Notification</string>
    <string name="notAgree">did not agree</string>
    <string name="signup1">Sign up 1/4</string>
    <string name="agree">Agree</string>
    <string name="back">Go back</string>
    <string name="next">Next</string>
    <string name="signup2">Sign up 2/4</string>
    <string name="signup3">Sign up 3/4</string>
    <string name="id_guide">Please enter the actual email you are using.</string>
    <string name="id_Label">Enter ID(E-mail)</string>
    <string name="num_Label">Certification Number</string>
    <string name="check_Label">Check</string>
    <string name="ok">OK</string>
    <string name="pw_Label">Enter Password</string>
    <string name="rpw_Label">Re-enter password</string>
    <string name="emailHelp">Please enter a valid email</string>
    <string name="passwordHelp">Password of at least 10 characters including uppercase letters, lowercase letters, numbers, and special characters</string>
    <string name="reEnterPasswordHelp">Passwords do not match</string>
    <string name="authSuccess">Authentication success</string>
    <string name="dupID">This email already exists..\nPlease enter a new email again.</string>
    <string name="checkEmail">Please check your email format.</string>
    <string name="sendVerification">Send a Certification number</string>
    <string name="confirmVerification">Please confirm your Certification number again</string>
    <string name="signup4">Sign up 4/4</string>
    <string name="name_Label">Name</string>
    <string name="height_Label">Height (cm)</string>
    <string name="height">Height</string>
    <string name="weight_Label">Weight (kg)</string>
    <string name="weight">Weight</string>
    <string name="birthday_Label">Birth Date</string>
    <string name="gender">gender</string>
    <string name="male_Label">Male</string>
    <string name="female_Label">Female</string>
    <string name="signup_complete">Sign up completed</string>
    <string name="nameHelp">Please enter the correct name</string>
    <string name="heightHelp">Please enter correct height</string>
    <string name="weightHelp">Please enter your correct weight</string>
    <string name="formatted_date">%1$dyear %2$dmonth %3$dday</string>
    <string name="enterAgain">\nPlease enter again</string>
    <string name="nameHintText">Please enter a name</string>
    <string name="heightHintText">Please enter your height</string>
    <string name="weightHintText">Please enter your weight</string>
    <string name="returnLogin">Return to the login page</string>
    <string name="rest">R</string>
    <string name="exercise">A</string>
    <string name="sleep">S</string>
    <string name="arr">I.H.R.</string>
    <string name="eCal">Activity calories</string>
    <string name="homeECal">Activity cal</string>
    <string name="eCalValue">0 kcal</string>
    <string name="eCalValue2">kcal</string>
    <string name="step">Steps</string>
    <string name="stepValue">0 step</string>
    <string name="stepValue2">step</string>
    <string name="temperature">Skin temp</string>
    <string name="temperatureValue">- °C</string>
    <string name="temperatureValue2">°C</string>
    <string name="distance">Distance</string>
    <string name="distanceM">Distance (m)</string>
    <string name="distanceValue">0.000 km</string>
    <string name="distanceValue2">km</string>
    <string name="distanceValue3">0 km</string>
    <string name="distanceM2">m</string>
    <string name="home_maxBpm">Max</string>
    <string name="home_minBpm">Min</string>
    <string name="home_avgBpm">Avg</string>
    <string name="home_hrv">HRV</string>
    <string name="home_hrv_unit">ms</string>
    <string name="summaryBpm">Bpm</string>
    <string name="summaryBpm_low">bpm</string>
    <string name="summaryArr">I.H.R.</string>
    <string name="summaryCal">Calorie</string>
    <string name="summaryStep">Step</string>
    <string name="summaryHRV">HRV</string>
    <string name="today">Today</string>
    <string name="twoDays">2 Days</string>
    <string name="threeDays">3 Days</string>
    <string name="arrTimes">I.H.R.\n(times/Day)</string>
    <string name="summaryTCal">Total calories (kcal)</string>
    <string name="summaryECal">Activity calories (kcal)</string>
    <string name="tCalTitle">Total calories</string>
    <string name="eCalTitle">Activity calories</string>
    <string name="avgHRV">Average</string>
    <string name="avgBPM">Average</string>
    <string name="enterInfo">Please enter your personal information.</string>
    <string name="findIDResult">Find ID results</string>
    <string name="failedPW">Failed to find password</string>
    <string name="noEnteredID">No email is entered.</string>
    <string name="emailNotExist">Email does not exist.\nPlease enter your email again.</string>
    <string name="passwordComp">Password change complete</string>
    <string name="reconfirmPW">Please reconfirm your password.</string>
    <string name="search">Search</string>
    <string name="registeredEmailInfo">Please enter your registered email.</string>
    <string name="sendCertification">Send Certification number</string>
    <string name="CertificationInfo">Enter the Certification number sent in the email.</string>
    <string name="CertificationTitle">Certification number</string>
    <string name="newPwInfo">Please enter a new password.</string>
    <string name="findID">Find ID</string>
    <string name="findPW">Find Password</string>
    <string name="fragment_day">Day</string>
    <string name="fragment_week">Week</string>
    <string name="fragment_month">Month</string>
    <string name="fragment_year">Year</string>
    <string name="fragment_bpm">BPM</string>
    <string name="arrState">Status :</string>
    <string name="arrType">Type :</string>
    <string name="typeArr">I.H.R.</string>
    <string name="typeFastArr">Fast heart rhythm</string>
    <string name="typeSlowArr">Slow heart rhythm</string>
    <string name="typeHeavyArr">Heavy I.H.R.</string>
    <string name="noArrData">No data available</string>
    <string name="logout">LOGOUT</string>
    <string name="logoutHelp">Do you want to log out?</string>
    <string name="rejectLogout">Cancel</string>
    <string name="sir">""</string>
    <string name="basic">Profile</string>
    <string name="target">Target</string>
    <string name="setting">Setting</string>
    <string name="ChangePw">Change Pw</string>
    <string name="age">age</string>
    <string name="saveData">Saved</string>
    <string name="failSaveData">Failed to save data</string>
    <string name="profile_save">Save</string>
    <string name="profile_sleep">Bed time</string>
    <string name="profile_wakeup">Wake up time</string>
    <string name="profile_phone">Phone Number(excluding \'-\')</string>
    <string name="profile_HelpInfo1">All personal information</string>
    <string name="profile_HelpInfo2">you enter is encrypted and safely managed.</string>
    <string name="profile2_HelpInfo1">Set standards that are right for you,</string>
    <string name="profile2_HelpInfo2">and achieve your daily health goals.</string>
    <string name="profile2_bpm">Activity-based bpm</string>
    <string name="profile2_bpmInfo">The average bpm for adult activity is 90.</string>
    <string name="profile2_steps">Steps</string>
    <string name="profile2_tCal">Total calorie</string>
    <string name="profile3_title">App notification settings</string>
    <string name="profile3_emergency">Emergency alert</string>
    <string name="profile3_myo">Myo-activity</string>
    <string name="profile3_nonContact">Electrode detached</string>
    <string name="profile3_guardianTitle">Guardian Notification</string>
    <string name="profile3_guardianNoti">Guardian notification</string>
    <string name="profile3_arrInfo1">When abnormal pulse occurs more than the standard number,\nan SMS notification is sent to the guardian.</string>
    <string name="profile3_arrInfo2">an SMS notification is sent to the guardian.</string>
    <string name="profile3_arrNumber">Number of I.H.R.</string>
    <string name="profile3_time">time</string>
    <string name="profile3_guardianNumber1">Guardian1 phone number(excluding \'-\')</string>
    <string name="profile3_guardianNumber2">Guardian2 phone number(excluding \'-\')</string>
    <string name="profile3_on">ON</string>
    <string name="profile3_off">OFF</string>
    <string name="setGuardianComp">Finish setting up guardians</string>
    <string name="setGuardianFail">Failed to set up a guardian\nPlease try again</string>
    <string name="setupGuardian">Set up guardians</string>
    <string name="setupGuardianTxt">Please enter your cell phone number correctly</string>
    <string name="exit">Exit?</string>
    <string name="exit2">Exit</string>
    <string name="notSupportBle">The device does not support Bluetooth.</string>
    <string name="notiTypeArr">I.H.R. detected!\n</string>
    <string name="notiTypeFastArr">Fast heart rhythm detected!\n</string>
    <string name="notiTypeSlowArr">Slow heart rhythm detected!\n</string>
    <string name="notiTypeHeavyArr">Heavy I.H.R. detected!\n</string>
    <string name="notiTypeMyo">Myo-activity detected!\n</string>
    <string name="notiTypeNonContact">Electrode detached!\n</string>
    <string name="arrCnt50">I.H.R. occurred 50 times today!\n</string>
    <string name="arrCnt50Text"> Aren’t you a little tired?</string>
    <string name="arrCnt100">I.H.R. occurred 100 times today!\n</string>
    <string name="arrCnt100Text">How about taking a short break?</string>
    <string name="arrCnt200">I.H.R. occurred 200 times today!\n</string>
    <string name="arrCnt200Text">Take some time to relax</string>
    <string name="arrCnt300">I.H.R. occurred 300 times today!\n</string>
    <string name="arrCnt300Text">Consider consulting with a medical staff</string>
    <string name="notiTime">Time : </string>
    <string name="notiHourlyArr10">Attention: 10 I.H.R. detected!</string>
    <string name="notiHourlyArr10Text">Check for stress or fatigue.</string>
    <string name="notiHourlyArr20">Warning: 20 I.H.R. detected</string>
    <string name="notiHourlyArr20Text">Check for persistent fatigue or other symptoms.</string>
    <string name="notiHourlyArr30">Emergency: 30 I.H.R. detected!</string>
    <string name="notiHourlyArr30Text">Consider consulting a medical staff.</string>
    <string name="notiHourlyArr50">Danger: 50 I.H.R. detected!</string>
    <string name="notiHourlyArr50Text">Consider consulting a medical staff</string>
    <string name="emergency">Emergency</string>
    <string name="sendEmergencyAlert">Send complete"</string>
    <string name="guardian">Guardian</string>
</resources>