<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:id="@+id/guardian_scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile3_guardianTitle"
                android:textSize="18dp"
                android:textStyle="bold"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/LightGrey"
                android:text="@string/profile3_arrInfo1"
                android:textSize="14dp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/profile3_guardianNoti" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/profile_button_background"
                android:orientation="horizontal"
                android:layout_marginEnd="20dp">

                <Button
                    android:id="@+id/guardian_off"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/profile3_off"
                    android:textSize="12dp"
                    android:layout_weight="1"
                    android:background="#00ff0000"
                    android:gravity="center"
                    android:layout_margin="5dp" />

                <Button
                    android:id="@+id/guardian_on"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/profile3_on"
                    android:textColor="@color/white"
                    android:textSize="12dp"
                    android:layout_weight="1"
                    android:background="@drawable/profile_button_press"
                    android:gravity="center"
                    android:layout_margin="5dp"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile3_arrNumber"
                android:layout_marginTop="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/profile_button_background"
                android:orientation="horizontal"
                android:layout_marginEnd="20dp">

                <Button
                    android:id="@+id/guardian_arrNumber_minus"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center"
                    android:background="@drawable/profile_minus"
                    android:textColor="@color/WHITE"
                    android:textSize="15dp" />

                <EditText
                    android:id="@+id/guardian_arrNumber_editText"
                    android:text="1"
                    android:textSize="14dp"
                    android:textColor="@color/darkGray"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:gravity="center"
                    android:enabled="false"/>

                <Button
                    android:id="@+id/guardian_arrNumber_plus"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginRight="10dp"
                    android:layout_gravity="center"
                    android:background="@drawable/profile_plus"
                    android:textColor="@color/WHITE"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/profile3_guardianNumber1" />

            <EditText
                android:id="@+id/first_guardian_editText"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textSize="14dp"
                android:paddingLeft="5dp"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/profile_button_background"
                android:inputType="number"
                android:layout_marginRight="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/profile3_guardianNumber2" />

            <EditText
                android:id="@+id/second_guardian_editText"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textSize="14dp"
                android:paddingLeft="5dp"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/profile_button_background"
                android:inputType="number"
                android:layout_marginRight="20dp"/>

            <Button
                android:id="@+id/guardian_save"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="60dp"
                android:background="@drawable/profile_save"
                android:text="@string/profile_save"
                android:textColor="@color/WHITE" />

            <View
                android:layout_width="match_parent"
                android:layout_height="100dp"/>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>